charts/traefik/kustomize/envs/jet/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - traefik
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      middlewares:
        - name: ip-allowlist-local
          namespace: traefik
        - name: basic-auth-middleware
          namespace: traefik
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
